# 10x-engineer

./: .gitignore  .gitmodules  README.md
.github/workflows/: deploy_staging.yml  review.yml
courses/LLMs-from-scratch/: .gitattributes  .gitignore  attention.py  bpe_tokenizer.py  ch02.ipynb  ch03.ipynb  ch04.ipynb  ch05.ipynb  ch06.ipynb  ch07.ipynb  dataset.py  gpt.py  gpt_download.py  gpt_train.py  pre_training.py  pyproject.toml  simple_dataset.py  simple_tokenizer.py  spam.py  weight_loading_hf_safetensors.py
courses/linux-performance-optimization-in-practice/: README.md  Vagrantfile
courses/linux-performance-optimization-in-practice/short-process/: main.go
examples/simple-a2a/: README.md  __main__.py  pyproject.toml  task_manager.py
examples/simple-agent/: pyproject.toml
examples/simple-agent/cookbook/: openai_chat.ipynb
examples/simple-fx/: go.mod  main.go
examples/simple-mcp/: README.md  cities.json  client.py  pyproject.toml  weather.py
labs/agentic-ai/: README.md  pyproject.toml
labs/linux-performance-optimization-in-practice/: Vagrantfile
labs/linux-performance-optimization-in-practice/high-cpu/: go.mod  main.go
leetcode/: README.md  leetgo.yaml
leetcode/rust/: Cargo.toml
leetcode/rust/src/0026.remove-duplicates-from-sorted-array/: question.md  solution.rs
leetcode/rust/src/0027.remove-element/: question.md  solution.rs
leetcode/rust/src/0034.find-first-and-last-position-of-element-in-sorted-array/: solution.rs
leetcode/rust/src/0035.search-insert-position/: solution.rs
leetcode/rust/src/0069.sqrtx/: solution.rs
leetcode/rust/src/0203.remove-linked-list-elements/: solution.rs
leetcode/rust/src/0209.minimum-size-subarray-sum/: question.md  solution.rs
leetcode/rust/src/0283.move-zeroes/: solution.rs
leetcode/rust/src/0367.valid-perfect-square/: question.md  solution.rs
leetcode/rust/src/0704.binary-search/: solution.rs
leetcode/rust/src/0844.backspace-string-compare/: solution.rs
leetcode/rust/src/0904.fruit-into-baskets/: question.md  solution.rs
leetcode/rust/src/0977.squares-of-a-sorted-array/: solution.rs
leetcode/src/: _026.rs  _027.rs  _034.rs  _035.rs  _069.rs  _203.rs  _209.rs  _283.rs  _367.rs  _704.rs  _844.rs  _904.rs  _977.rs  lib.rs
website/: config.toml
website/archetypes/: default.md
website/content/: _index.md
website/content/about/: index.md
(+3 files in other folders)
