[project]
name = "llms-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "safetensors>=0.6.2",
    "tiktoken>=0.11.0",
    "torch>=2.9.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.9",
]
