[project]
name = "simple-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.25",
    "langchain-core>=0.3.60",
    "langgraph>=0.4.5",
    "langchain-openai>=0.3.17",
    "python-dotenv>=1.1.0",
    "langchain-community>=0.3.24",
    "tavily-python>=0.7.2",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.2",
]
